# 3d_model_generator

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: batch.rs  doctor.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  external.rs  lib.rs  pipeline.rs  quality.rs  smoke.rs  validate.rs
crates/core/src/export/: glb.rs  mod.rs
crates/core/src/mesh/: decimate.rs  heal.rs  import.rs  mod.rs  normalize.rs
crates/core/src/pipeline/: lofi.rs  mod.rs  process.rs  reconstruct.rs
crates/core/src/preprocess/: downscale.rs  mod.rs  segment.rs  sharpness.rs
crates/core/src/rebake/: mod.rs  obj.rs
crates/core/src/reconstruct/: dense.rs  embed.rs  gates.rs  ignore_mask.rs  mod.rs  sfm.rs
crates/core/src/texture/: mod.rs  pixelate.rs
docker/: Dockerfile  environment.yml
docs/: CONCEPTS.md  IMPROVEMENTS.md
scripts/: bake_worker.py  build-image.sh  rebake.py  render_preview.py
