[package]
name = "modelgen-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "modelgen_core"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
image = "0.25"
ply-rs = "0.1"
serde_json = "1"
meshopt = "0.6.2"
bytemuck = { version = "1.25.0", features = ["derive"] }
quantette = { version = "0.6.0", features = ["image", "threads"] }
tobj = "4.0.4"

[dev-dependencies]
tempfile = "3.27.0"
