[package]
name = "modelgen-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "modelgen_core"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
# Used by preprocess (downscale + rembg-mask compositing).
image = "0.25"

[dev-dependencies]
tempfile = "3.27.0"
